tests/cases/errors/compile_double_operator.lox
// The second '+' has no prefix rule.
// expect compile error: Expect expression
1 + + 2
